# libgaotp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/node/: binding.gyp  gaotp.js  gaotp.node  gaotp_node.c  gatop.js  gatop.node
bindings/python/: gaotp.py
src/: CMakeLists.txt  gaotp.c  gaotp.h  libgaotp.c  libgaotp.h
src/bindings/: binding.gyp  gaotp_node.c  gatop_node.c  gatop_node.js
tools/: CMakeLists.txt  gaotp.c  gaotptool.c
